--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,9 @@
 @import 'fonts'
+@import 'variables'
+@import 'interface'
+@import 'header'
+
 *
     box-sizing: border-box
 body
-    font-family: Roboto Black
-    font-style: italic
+    font-family: Roboto Medium, serif
