added part of main section

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -9,7 +9,7 @@
             font-size: 22px
             margin-right: 14px
             text-decoration: none
-            &-border-right
+            &:first-child
                 border-right: 1px solid #cfcfd0
                 padding-right: 14px
-        &__button
+ 
