--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+img {
+  max-width: 100%;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 @font-face {
   font-family: 'Roboto Bold';
   src: url("../fonts/Roboto/Roboto-Bold.eot");
@@ -79,9 +88,58 @@
   text-decoration: none;
 }
 
-.header-contacts__phone-border-right {
+.header-contacts__phone:first-child {
   border-right: 1px solid #cfcfd0;
   padding-right: 14px;
+}
+
+.main {
+  position: relative;
+  padding-top: 65px;
+  padding-bottom: 60px;
+  background: #373737 url("../img/main/main-bg.jpg") center center no-repeat;
+  color: #ffffff;
+  z-index: 1;
+}
+
+.main::before {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 0;
+}
+
+.main-img {
+  position: relative;
+}
+
+.main-img::before {
+  position: absolute;
+  content: '';
+  left: 50%;
+  margin-left: -195px;
+  width: 390px;
+  height: 390px;
+  border: 1px solid #ffffff;
+  border-radius: 50%;
+  z-index: -1;
+}
+
+.main-text__title {
+  font-family: Roboto Bold, serif;
+  font-size: 41px;
+  margin-bottom: 20px;
+}
+
+.main-text__subtitle {
+  font-family: Roboto Light;
+  font-size: 28px;
+  font-weight: 500;
 }
 
 * {
