--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,7 +1,9 @@
+@import 'reset'
 @import 'fonts'
 @import 'variables'
 @import 'interface'
 @import 'header'
+@import 'main'
 
 *
     box-sizing: border-box
