--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -3,6 +3,7 @@
     padding-top: 65px
     padding-bottom: 60px
     background: $text-color-dark url('../img/main/main-bg.jpg') center center no-repeat
+    background-size: cover
     color: $text-color-light
     z-index: 1
     // Оформление затемнения фона
@@ -36,6 +37,36 @@
             font-size: 41px
             margin-bottom: 20px
         &__subtitle
+            margin-bottom: 27px
             font-family: Roboto Light
             font-size: 28px
             font-weight: 500
+        &__form
+            padding: 30px 27px
+            background-color: rgba(255, 255, 255, 0.2)
+.form
+    display: flex
+    margin-bottom: 12px
+    // justify-content: space-between
+    &-title
+        margin-bottom: 20px
+        padding-right: 87px
+        font-family: Roboto Light
+        font-size: 20px
+        line-height: 30px
+        &__important
+            display: block
+            text-transform: uppercase
+            font-family: Roboto Bold
+    &__input
+        margin-right: 10px
+        padding: 20px
+        border-radius: 5px
+        border: none
+        font-family: Roboto Light
+        vertical-align: middle
+        flex-basis: 50%
+    &-small
+        padding-left: 19px
+        font-family: Roboto Light
+        font-size: 14px
