--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -8,6 +8,10 @@
     border-radius: 5px
     &:hover
         background-color: lighten($active-color, 5)
+    &_big
+        padding-top: 20px
+        padding-bottom: 20px
+        vertical-align: middle
         
     img
         vertical-align: middle
